--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 
-   <head>
-      <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129605321-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<head>
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+   <script async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-129605321-1"></script>
+   <script>
+      window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-129605321-1');
-</script>
+      function gtag() {
+         dataLayer.push( arguments );
+      }
+      gtag( 'js', new Date() );
+
+      gtag( 'config', 'UA-129605321-1' );
+   </script>
 
 
-      <meta charset="utf-8" />
-      <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <meta name="theme-color" content="#FFFFFF" />
-      <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+   <meta charset="utf-8" />
+   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+   <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <meta name="theme-color" content="#FFFFFF" />
+   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-      <title>DisciplineDesign</title>
-   </head>
+   <title>DisciplineDesign</title>
+</head>
 
-   <body>
-      <noscript>You need to enable JavaScript to run this app.</noscript>
-      <div id="root"></div>
+<body>
 
-   </body>
+   <div id="root"></div>
+
+</body>
 
 </html>
