--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-129605321-1"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
 
-<head>
-   <!-- Global site tag (gtag.js) - Google Analytics -->
-   <script async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-129605321-1"></script>
-   <script>
-      window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
 
-      function gtag() {
-         dataLayer.push( arguments );
-      }
-      gtag( 'js', new Date() );
+			gtag('config', 'UA-129605321-1');
+		</script>
+		<!-- Hotjar Tracking Code for www.discipline.design -->
+		<script>
+			(function(h, o, t, j, a, r) {
+				h.hj =
+					h.hj ||
+					function() {
+						(h.hj.q = h.hj.q || []).push(arguments);
+					};
+				h._hjSettings = { hjid: 1668180, hjsv: 6 };
+				a = o.getElementsByTagName('head')[0];
+				r = o.createElement('script');
+				r.async = 1;
+				r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+				a.appendChild(r);
+			})(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+		</script>
 
-      gtag( 'config', 'UA-129605321-1' );
-   </script>
+		<meta charset="utf-8" />
+		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#FFFFFF" />
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+		<title>DisciplineDesign</title>
+	</head>
 
-   <meta charset="utf-8" />
-   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-   <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <meta name="theme-color" content="#FFFFFF" />
-   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-   <title>DisciplineDesign</title>
-</head>
-
-<body>
-
-   <div id="root"></div>
-
-</body>
-
+	<body>
+		<div id="root"></div>
+	</body>
 </html>
